下载地址错误

--- a/固件烧录.md
+++ b/固件烧录.md
@@ -67,7 +67,7 @@
 
 烧录软件: flash_download_tools_vX.zip	[点这里下载](https://www.espressif.com/zh-hans/support/download/other-tools)
 
-完整固件: dc1.bin	[点这里下载](https://github.com/esp_dc1/releases)
+完整固件: dc1.bin	[点这里下载](https://github.com/qlwz/esp_dc1/releases)
 
 ### 开始烧录
 
