更新图片链接

--- a/固件烧录.md
+++ b/固件烧录.md
@@ -36,12 +36,12 @@
 
 **如果插座刚通过电，拆的时候千万不要去摸电路板，电容带电！！！**
 
-![image](file/flash/1.jpg)
-![image](file/flash/2.jpg)
-![image](file/flash/3.jpg)
-![image](file/flash/4.jpg)
-![image](file/flash/5.jpg)
-![image](file/flash/6.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/1.jpg?raw=true)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/2.jpg?raw=true)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/3.jpg?raw=true)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/4.jpg?raw=true)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/5.jpg?raw=true)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/6.jpg?raw=true)
 
 #### 2、主控板接线
 
@@ -54,8 +54,8 @@
 
 ##### 接线方法
 
-![image](file/flash/wiring_diagram.jpg)
-![image](file/flash/wiring_diagram1.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/wiring_diagram.jpg?raw=true)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/wiring_diagram1.jpg?raw=true)
 
 
 
@@ -73,13 +73,13 @@
 
 将flash_download_tools_vX.zip解压,打开目录下的flash_download_tools_vX.exe,选择ESP8266 DownloadTool,根据以下截图做配置,
 
-![image](file/flash/flash1.png)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/flash1.png?raw=true)
 
 将与主控板连接的usbTTL连接上电脑(确保主控io0必需短接gnd后再上电,以进入刷机模式),根据自己的实际串口号设置.,点击START按钮即可开始烧录.
 
 
 
-稍等片刻,出现![FINISH_S](file/flash/FINISH_S.bmp)即为烧录超过
+稍等片刻,出现![FINISH_S](https://github.com/qlwz/esp_dc1/blob/master/file/flash/FINISH_S.bmp?raw=true)即为烧录超过
 
 
 
