还原图片链接

--- a/固件烧录.md
+++ b/固件烧录.md
@@ -24,38 +24,38 @@
 
 > 本章节(拆机与TTL接线方法)中所有内容(包含图片)均来自[三木大神的基于esphome的DC1插座自制固件](https://github.com/Samuel-0-0/phicomm_dc1-esphome/tree/master/cookbook),感谢授权使用
 
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/warning_50px.png)   请勿带市电操作！！！危险自负！！！
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/warning_50px.png)   请勿带市电操作！！！危险自负！！！
 
 #### 1、拆主控板
 
 ##### 用到的工具
 
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/disassembly.jpg)
+![image](file/flash/disassembly.jpg)
 
 ##### 拆板步骤
 
 **如果插座刚通过电，拆的时候千万不要去摸电路板，电容带电！！！**
 
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/1.jpg)
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/2.jpg)
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/3.jpg)
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/4.jpg)
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/5.jpg)
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/6.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/1.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/2.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/3.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/4.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/5.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/6.jpg)
 
 #### 2、主控板接线
 
 ##### 用到的TTL工具
 
 任选一个即可
-![image](file/flash/ttl.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/ttl.jpg)
 
 
 
 ##### 接线方法
 
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/wiring_diagram.jpg)
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/wiring_diagram1.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/wiring_diagram.jpg)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/wiring_diagram1.jpg)
 
 
 
@@ -73,13 +73,13 @@
 
 将flash_download_tools_vX.zip解压,打开目录下的flash_download_tools_vX.exe,选择ESP8266 DownloadTool,根据以下截图做配置,
 
-![image](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/flash1.png)
+![image](https://github.com/qlwz/esp_dc1/blob/master/file/flash/flash1.png)
 
 将与主控板连接的usbTTL连接上电脑(确保主控io0必需短接gnd后再上电,以进入刷机模式),根据自己的实际串口号设置.,点击START按钮即可开始烧录.
 
 
 
-稍等片刻,出现![FINISH_S](http://file.qqlite.cn/esp8266/esp_dc1/file/flash/FINISH_S.bmp)即为烧录超过
+稍等片刻,出现![FINISH_S](https://github.com/qlwz/esp_dc1/blob/master/file/flash/FINISH_S.bmp)即为烧录超过
 
 
 
